--- a/計算機.html
+++ b/計算機.html
@@ -5,11 +5,13 @@
     <title>計算機</title>
 </head>
 <body>
-    <h1>四則演算をします</h1>
+    <h1>四則演算</h1>
+    <p>(足し算 : +, 引き算 : -, 掛け算: *, 割り算 : / (すべて半角))</p>
     <input type="text" id="operand1">
     <input type="text" id="opecode">
     <input type="text" id="operand2">
+    <button>計算</button>
     <p>計算結果</p>
-    <p id="output"></p>
+    <script src="計算機.js"></script>
 </body>
 </html>
