ファイル名変更

--- a/index.html
+++ b/index.html
@@ -12,6 +12,6 @@
     <input type="text" id="operand2">
     <button>計算</button>
     <p>計算結果</p>
-    <script src="計算機.js"></script>
+    <script src="calculator.js"></script>
 </body>
 </html>
